--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Vibras Positivas - Apps</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vibras Positivas - Menú de Apps</title>
     <style>
-        body { background: #000; color: #FFD700; text-align: center; font-family: Arial; padding: 50px; }
-        .btn { background: #FFD700; color: #000; padding: 15px 30px; text-decoration: none; border-radius: 10px; font-weight: bold; }
+        body { background: #000; color: #FFD700; text-align: center; font-family: 'Arial', sans-serif; padding: 40px 20px; }
+        h1 { font-size: 1.8rem; border-bottom: 2px solid #FFD700; display: inline-block; padding-bottom: 10px; }
+        .container { display: flex; flex-direction: column; gap: 20px; align-items: center; margin-top: 30px; }
+        .btn { background: #FFD700; color: #000; padding: 18px; text-decoration: none; border-radius: 12px; font-weight: bold; width: 100%; max-width: 300px; font-size: 1.1rem; box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3); transition: 0.3s; }
+        .btn:hover { transform: scale(1.05); background: #fff; }
+        footer { margin-top: 50px; font-size: 0.8rem; color: #555; }
     </style>
 </head>
 <body>
     <h1>BIENVENIDO A VIBRAS POSITIVAS</h1>
-    <p>Selecciona una tienda para pedir domicilio:</p>
-    <br><br>
-    <a href="./nelson/" class="btn">TIENDA DE NELSON</a>
+    <p>Selecciona una tienda para pedir tu domicilio:</p>
+    
+    <div class="container">
+        <a href="./nelson/" class="btn">🛒 TIENDA DE NELSON</a>
+        
+        <a href="./inversiones-charlotte/" class="btn">👔 INVERSIONES CHARLOTTE</a>
+    </div>
+
+    <footer>
+        Desarrollado por Vibras Positivas &copy; 2026
+    </footer>
 </body>
 </html>
