--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <p>Selecciona una tienda para pedir tu domicilio:</p>
     
     <div class="container">
+        <div class="container">
         <a href="./nelson/" class="btn">🛒 TIENDA DE NELSON</a>
-        
         <a href="./inversiones-charlotte/" class="btn">👔 INVERSIONES CHARLOTTE</a>
+        <a href="./fruver-la-bendicion/" class="btn">🍎 FRUVER LA CENTRAL</a>
     </div>
 
     <footer>
