--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Vibras Positivas - Menú de Apps</title>
     <style>
         body { background: #000; color: #FFD700; text-align: center; font-family: 'Arial', sans-serif; padding: 40px 20px; }
-        h1 { font-size: 1.8rem; border-bottom: 2px solid #FFD700; display: inline-block; padding-bottom: 10px; }
+        h1 { font-size: 1.8rem; border-bottom: 2px solid #FFD700; display: inline-block; padding-bottom: 10px; text-transform: uppercase; }
         .container { display: flex; flex-direction: column; gap: 20px; align-items: center; margin-top: 30px; }
-        .btn { background: #FFD700; color: #000; padding: 18px; text-decoration: none; border-radius: 12px; font-weight: bold; width: 100%; max-width: 300px; font-size: 1.1rem; box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3); transition: 0.3s; }
-        .btn:hover { transform: scale(1.05); background: #fff; }
+        .btn { background: #FFD700; color: #000; padding: 18px; text-decoration: none; border-radius: 12px; font-weight: bold; width: 100%; max-width: 320px; font-size: 1.1rem; box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3); transition: 0.3s; border: 2px solid transparent; }
+        .btn:hover { transform: scale(1.05); background: #fff; border: 2px solid #FFD700; }
         footer { margin-top: 50px; font-size: 0.8rem; color: #555; }
     </style>
 </head>
@@ -18,14 +18,16 @@
     <p>Selecciona una tienda para pedir tu domicilio:</p>
     
     <div class="container">
-        <div class="container">
         <a href="./nelson/" class="btn">🛒 TIENDA DE NELSON</a>
+        
         <a href="./inversiones-charlotte/" class="btn">👔 INVERSIONES CHARLOTTE</a>
-        <a href="./fruver-la-bendicion/" class="btn">🍎 FRUVER LA CENTRAL</a>
+
+        <a href="./fruver-lacentral/" class="btn">🍋 FRUVER LA CENTRAL</a>
     </div>
 
     <footer>
-        Desarrollado por Vibras Positivas &copy; 2026
+        Red de Domicilios Vibras Positivas &copy; 2026 <br>
+        Caucasia, Antioquia
     </footer>
 </body>
 </html>
