--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <p>Selecciona una tienda para pedir tu domicilio:</p>
     
     <div class="container">
-        <a href="./nelson/" class="btn">🛒 TIENDA DE NELSON</a>
+        <a href="./distrileco/" class="btn" style="border: 3px solid #FFD700; background: #fff;">🏢 DISTRILECO (SUPERARROZ)</a>
         
+        <a href="./nelson/" class="btn">🛒 TIENDA DE NELSON</a>
         <a href="./inversiones-charlotte/" class="btn">👔 INVERSIONES CHARLOTTE</a>
-
         <a href="./fruver-lacentral/" class="btn">🍋 FRUVER LA CENTRAL</a>
     </div>
 
