--- a/distrileco/index.html
+++ b/distrileco/index.html
@@ -1,6 +1,139 @@
-const CONFIG = {
-        nombreNegocio: "DISTRILECO CAUCASIA - MARCAS PROPIAS",
-        whatsapp: "573117700431", // Tu número de gestión comercial
-        idSuscriptor: "VP-CAU-004",    // El cuarto pilar de tu red
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DISTRILECO - Pedidos Online</title>
+    <style>
+        :root { --primario: #FFD700; --secundario: #000000; --blanco: #ffffff; --gris-claro: #f4f4f4; }
+        body { font-family: 'Arial', sans-serif; background-color: var(--gris-claro); margin: 0; padding: 15px; }
+        .card { max-width: 500px; margin: auto; background: var(--blanco); border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); overflow: hidden; border: 2px solid var(--primario); }
+        header { background: var(--secundario); color: var(--primario); padding: 25px; text-align: center; border-bottom: 5px solid var(--primario); }
+        .logo-area { font-size: 26px; font-weight: bold; text-transform: uppercase; letter-spacing: 3px; }
+        .content { padding: 20px; }
+        .section-title { font-size: 14px; font-weight: bold; color: #666; text-transform: uppercase; margin-bottom: 10px; border-bottom: 1px solid var(--primario); display: inline-block; }
+        input, select, textarea { width: 100%; padding: 14px; margin: 10px 0; border: 1px solid #ccc; border-radius: 10px; font-size: 16px; box-sizing: border-box; }
+        .btn { width: 100%; padding: 15px; border: none; border-radius: 10px; font-size: 16px; font-weight: bold; cursor: pointer; transition: 0.3s; margin: 10px 0; }
+        .btn-gold { background: var(--primario); color: var(--secundario); }
+        .btn-whatsapp { background: #25D366; color: white; font-size: 18px; }
+        .btn-edit { background: #eee; color: #333; font-size: 13px; padding: 8px; }
+        .prod-row { display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 8px; margin-bottom: 5px; }
+        .hidden { display: none; }
+        footer { text-align: center; padding: 20px; font-size: 12px; color: #888; background: #fff; border-top: 1px solid #eee; }
+        .vp-brand { color: var(--secundario); font-weight: bold; }
+    </style>
+</head>
+<body>
+<div class="card">
+    <header>
+        <div class="logo-area">DISTRILECO</div>
+        <div style="font-size: 11px; color: white; margin-top: 5px;">SUPERARROZ • VISTAHERMOSA</div>
+    </header>
+    <div class="content">
+        <div id="bloque-cliente">
+            <div class="section-title">Tus Datos de Cliente</div>
+            <div id="cliente-info-guardada" class="hidden">
+                <p id="texto-resumen" style="font-size: 14px; color: #333; background: #fff9db; padding: 12px; border-radius: 8px;"></p>
+                <button class="btn-edit" onclick="mostrarEditor()">⚙️ Cambiar mis datos</button>
+            </div>
+            <div id="cliente-editor">
+                <input type="text" id="c_nombre" placeholder="Nombre o Razón Social">
+                <input type="text" id="c_direccion" placeholder="Dirección de Despacho">
+                <input type="tel" id="c_celular" placeholder="Celular de Contacto">
+                <button class="btn btn-gold" onclick="guardarCliente()">Guardar Mis Datos</button>
+            </div>
+        </div>
+        <hr style="opacity: 0.2; margin: 20px 0;">
+        <div class="section-title">Pedido de Mercancía</div>
+        <div id="lista-productos">
+            <div class="prod-row">
+                <input type="text" class="p-name" placeholder="Ej: Superarroz Paca" list="sugerencias">
+                <input type="text" class="p-unit" placeholder="Paca/Bulto">
+                <input type="number" class="p-qty" placeholder="Cant">
+            </div>
+        </div>
+        <datalist id="sugerencias">
+            <option value="Superarroz Blanco">
+            <option value="Superarroz Integral">
+            <option value="Vistahermosa Parbolizado">
+        </datalist>
+        <button onclick="agregarFila()" style="color: #666; background: none; border: none; cursor: pointer; font-size: 13px;">+ Agregar otro producto</button>
+        <textarea id="observaciones" placeholder="Ej: Favor entregar antes de las 10:00 AM"></textarea>
+        <div class="section-title">Método de Pago</div>
+        <select id="pago">
+            <option value="Contado / Efectivo">Contado / Efectivo</option>
+            <option value="Transferencia Bancaria">Transferencia Bancaria</option>
+            <option value="Crédito Autorizado">Crédito Autorizado</option>
+        </select>
+        <button class="btn btn-whatsapp" onclick="enviarPedido()">🚀 ENVIAR PEDIDO A DISTRILECO</button>
+    </div>
+    <footer>App oficial de Distrileco <br>Desarrollada por <span class="vp-brand">VIBRAS POSITIVAS</span><br>© 2026</footer>
+</div>
+
+<script>
+    const CONFIG = {
+        nombreNegocio: "DISTRILECO CAUCASIA",
+        whatsapp: "573117700431", // Tu número comercial
+        idSuscriptor: "VP-CAU-004",
         suscripcionActiva: true
     };
+
+    let numeroPedido = Math.floor(Math.random() * 90000) + 10000;
+    window.onload = () => { verificarDatosGuardados(); cargarHistorialProductos(); };
+
+    function guardarCliente() {
+        const d = { n: document.getElementById('c_nombre').value, d: document.getElementById('c_direccion').value, c: document.getElementById('c_celular').value };
+        if(d.n && d.d && d.c) { localStorage.setItem('vp_cliente_distrileco', JSON.stringify(d)); verificarDatosGuardados(); }
+    }
+
+    function verificarDatosGuardados() {
+        const g = JSON.parse(localStorage.getItem('vp_cliente_distrileco'));
+        if(g) { 
+            document.getElementById('cliente-editor').classList.add('hidden');
+            document.getElementById('cliente-info-guardada').classList.remove('hidden');
+            document.getElementById('texto-resumen').innerText = `Pedido para: ${g.n}\nDir: ${g.d}`;
+        }
+    }
+
+    function mostrarEditor() { 
+        document.getElementById('cliente-editor').classList.remove('hidden');
+        document.getElementById('cliente-info-guardada').classList.add('hidden');
+    }
+
+    function agregarFila() {
+        const div = document.createElement('div'); div.className = 'prod-row';
+        div.innerHTML = `<input type="text" class="p-name" placeholder="Producto" list="sugerencias"><input type="text" class="p-unit" placeholder="Unidad"><input type="number" class="p-qty" placeholder="Cant">`;
+        document.getElementById('lista-productos').appendChild(div);
+    }
+
+    function cargarHistorialProductos() {
+        const h = JSON.parse(localStorage.getItem('vp_historial_distrileco')) || [];
+        document.getElementById('sugerencias').innerHTML += h.map(x => `<option value="${x}">`).join('');
+    }
+
+    function enviarPedido() {
+        const c = JSON.parse(localStorage.getItem('vp_cliente_distrileco'));
+        if(!c) return alert("Por favor, guarda tus datos primero.");
+        
+        navigator.geolocation.getCurrentPosition(pos => {
+            const gps = `https://www.google.com/maps?q=${pos.coords.latitude},${pos.coords.longitude}`;
+            finalizar(c, gps);
+        }, () => finalizar(c, "No proporcionada"));
+    }
+
+    function finalizar(c, gps) {
+        let msj = `*DISTRILECO - NUEVO PEDIDO #${numeroPedido}*\n*CLIENTE:* ${c.n}\n*CEL:* ${c.c}\n*DIR:* ${c.d}\n--------------------------\n*MERCANCÍA:*\n`;
+        let h = JSON.parse(localStorage.getItem('vp_historial_distrileco')) || [];
+        document.querySelectorAll('.p-name').forEach((n, i) => {
+            if(n.value) { 
+                msj += `• ${n.value} (${document.querySelectorAll('.p-qty')[i].value} ${document.querySelectorAll('.p-unit')[i].value})\n`;
+                if(!h.includes(n.value)) h.push(n.value);
+            }
+        });
+        localStorage.setItem('vp_historial_distrileco', JSON.stringify(h));
+        msj += `--------------------------\n*PAGO:* ${document.getElementById('pago').value}\n*UBICACIÓN:* ${gps}\n\n_Gestionado por Vibras Positivas_`;
+        window.open(`https://wa.me/${CONFIG.whatsapp}?text=${encodeURIComponent(msj)}`, '_blank');
+    }
+</script>
+</body>
+</html>
