--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <a href="./nelson/" class="btn">🛒 TIENDA DE NELSON</a>
         <a href="./inversiones-charlotte/" class="btn">👔 INVERSIONES CHARLOTTE</a>
         <a href="./fruver-lacentral/" class="btn">🍋 FRUVER LA CENTRAL</a>
+        <a href="./miniprecios/" class="btn">💰 MINIPRECIOS</a>
     </div>
 
     <footer>
