--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <a href="./inversiones-charlotte/" class="btn">👔 INVERSIONES CHARLOTTE</a>
         <a href="./fruver-lacentral/" class="btn">🍋 FRUVER LA CENTRAL</a>
         <a href="./miniprecios/" class="btn">💰 MINIPRECIOS</a>
+        <a href="./celumaster/" class="btn">📱 CELUMASTER</a>
+
     </div>
 
     <footer>
