--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <a href="./fruver-lacentral/" class="btn">🍋 FRUVER LA CENTRAL</a>
         <a href="./miniprecios/" class="btn">💰 MINIPRECIOS</a>
         <a href="./celumaster/" class="btn">📱 CELUMASTER</a>
+        <a href="./luzmar/" class="btn">✨ LUZMAR</a>
+
 
     </div>
 
