--- a/fruver-lacentral/index.html
+++ b/fruver-lacentral/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vibras Positivas - Fruver La Central</title>
+    <title>Vibras Positivas - App</title>
     <style>
         :root { --primario: #FFD700; --secundario: #000000; --blanco: #ffffff; --gris-claro: #f4f4f4; }
         body { font-family: 'Arial', sans-serif; background-color: var(--gris-claro); margin: 0; padding: 15px; }
@@ -16,117 +16,91 @@
         .btn { width: 100%; padding: 15px; border: none; border-radius: 10px; font-size: 16px; font-weight: bold; cursor: pointer; transition: 0.3s; margin: 10px 0; }
         .btn-gold { background: var(--primario); color: var(--secundario); }
         .btn-whatsapp { background: #25D366; color: white; font-size: 18px; }
-        .btn-edit { background: #eee; color: #333; font-size: 13px; padding: 8px; }
         .prod-row { display: grid; grid-template-columns: 2fr 1fr 1fr; gap: 8px; margin-bottom: 5px; }
         .hidden { display: none; }
         footer { text-align: center; padding: 20px; font-size: 12px; color: #888; background: #fff; }
-        .vp-brand { color: var(--secundario); font-weight: bold; text-decoration: none; }
     </style>
 </head>
 <body>
 <div class="card">
     <header>
-        <div class="logo-area">FRUVER LA CENTRAL</div>
-        <div style="font-size: 10px; color: white;">PEDIDOS ONLINE</div>
+        <div id="display-nombre" class="logo-area">TIENDA</div>
     </header>
     <div class="content">
         <div id="bloque-cliente">
             <div class="section-title">Datos de Entrega</div>
-            <div id="cliente-info-guardada" class="hidden">
-                <p id="texto-resumen" style="font-size: 14px; color: #333; background: #fff9db; padding: 10px; border-radius: 8px;"></p>
-                <button class="btn-edit" onclick="mostrarEditor()">⚙️ Editar mis datos</button>
-            </div>
             <div id="cliente-editor">
                 <input type="text" id="c_nombre" placeholder="Tu Nombre">
                 <input type="text" id="c_direccion" placeholder="Dirección Exacta">
                 <input type="tel" id="c_celular" placeholder="Celular">
                 <button class="btn btn-gold" onclick="guardarCliente()">Confirmar Mis Datos</button>
             </div>
+            <div id="cliente-info-guardada" class="hidden">
+                <p id="texto-resumen" style="font-size: 14px; color: #333; background: #fff9db; padding: 10px; border-radius: 8px;"></p>
+                <button onclick="mostrarEditor()" style="font-size: 12px;">Editar datos</button>
+            </div>
         </div>
         <hr style="opacity: 0.2; margin: 20px 0;">
         <div class="section-title">Tu Pedido</div>
         <div id="lista-productos">
             <div class="prod-row">
-                <input type="text" class="p-name" placeholder="Producto" list="sugerencias">
-                <input type="text" class="p-unit" placeholder="Und (lb/kg)">
+                <input type="text" class="p-name" placeholder="Producto">
+                <input type="text" class="p-unit" placeholder="Und">
                 <input type="number" class="p-qty" placeholder="Cant">
             </div>
         </div>
-        <datalist id="sugerencias"></datalist>
-        <button onclick="agregarFila()" style="color: #666; background: none; border: none; cursor: pointer; font-size: 13px;">+ Agregar otro producto</button>
-        <textarea id="observaciones" placeholder="Instrucciones especiales..."></textarea>
-        <div class="section-title">Forma de Pago</div>
-        <select id="pago">
-            <option value="Efectivo">Efectivo</option>
-            <option value="Transferencia">Transferencia</option>
-        </select>
-        <button class="btn btn-whatsapp" onclick="enviarPedido()">🚀 ENVIAR POR WHATSAPP</button>
+        <button onclick="agregarFila()" style="font-size: 13px;">+ Agregar otro</button>
+        <textarea id="observaciones" placeholder="Observaciones (Ej: El timbre no sirve, dejar en portería...)"></textarea>
+        <button class="btn btn-whatsapp" onclick="enviarPedido()">🚀 ENVIAR PEDIDO</button>
     </div>
-    <footer>App desarrollada por <br><span class="vp-brand">VIBRAS POSITIVAS</span><br>© 2026</footer>
+    <footer>VIBRAS POSITIVAS © 2026</footer>
 </div>
 
 <script>
+    // SOLO CAMBIA ESTO PARA CADA CLIENTE
     const CONFIG = {
-        nombreNegocio: "FRUVER LA CENTRAL",
+        nombreNegocio: "MINIPRECIOS", 
         whatsapp: "573148648770", 
-        idSuscriptor: "VP-CAU-003",
-        suscripcionActiva: true
+        idSuscriptor: "VP-CAU-005"
     };
 
-    let numeroPedido = Math.floor(Math.random() * 10000);
-    window.onload = () => { verificarDatosGuardados(); cargarHistorialProductos(); };
+    document.getElementById('display-nombre').innerText = CONFIG.nombreNegocio;
 
     function guardarCliente() {
         const d = { n: document.getElementById('c_nombre').value, d: document.getElementById('c_direccion').value, c: document.getElementById('c_celular').value };
-        if(d.n && d.d && d.c) { localStorage.setItem('vp_cliente', JSON.stringify(d)); verificarDatosGuardados(); }
+        if(d.n && d.d && d.c) { localStorage.setItem('vp_datos', JSON.stringify(d)); location.reload(); }
     }
 
-    function verificarDatosGuardados() {
-        const g = JSON.parse(localStorage.getItem('vp_cliente'));
-        if(g) { 
+    function verificarDatos() {
+        const g = JSON.parse(localStorage.getItem('vp_datos'));
+        if(g) {
             document.getElementById('cliente-editor').classList.add('hidden');
             document.getElementById('cliente-info-guardada').classList.remove('hidden');
-            document.getElementById('texto-resumen').innerText = `Entregar a: ${g.n} \nDir: ${g.d}`;
+            document.getElementById('texto-resumen').innerText = `Entregar a: ${g.n}\nDir: ${g.d}`;
         }
     }
-
-    function mostrarEditor() { 
-        document.getElementById('cliente-editor').classList.remove('hidden');
-        document.getElementById('cliente-info-guardada').classList.add('hidden');
-    }
+    window.onload = verificarDatos;
 
     function agregarFila() {
         const div = document.createElement('div'); div.className = 'prod-row';
-        div.innerHTML = `<input type="text" class="p-name" placeholder="Producto" list="sugerencias"><input type="text" class="p-unit" placeholder="Und"><input type="number" class="p-qty" placeholder="Cant">`;
+        div.innerHTML = `<input type="text" class="p-name" placeholder="Producto"><input type="text" class="p-unit" placeholder="Und"><input type="number" class="p-qty" placeholder="Cant">`;
         document.getElementById('lista-productos').appendChild(div);
     }
 
-    function cargarHistorialProductos() {
-        const h = JSON.parse(localStorage.getItem('vp_historial')) || [];
-        document.getElementById('sugerencias').innerHTML = h.map(x => `<option value="${x}">`).join('');
-    }
-
     function enviarPedido() {
-        const c = JSON.parse(localStorage.getItem('vp_cliente'));
-        if(!c) return alert("Guarda tus datos primero.");
+        const c = JSON.parse(localStorage.getItem('vp_datos'));
+        if(!c) return alert("Primero confirma tus datos.");
         
-        navigator.geolocation.getCurrentPosition(pos => {
-            const gps = `https://www.google.com/maps?q=${pos.coords.latitude},${pos.coords.longitude}`;
-            finalizar(c, gps);
-        }, () => finalizar(c, "No compartida"));
-    }
-
-    function finalizar(c, gps) {
-        let msj = `*NUEVO PEDIDO #${numeroPedido}*\n*CLIENTE:* ${c.n}\n*DIR:* ${c.d}\n--------------------------\n*PEDIDO:*\n`;
-        let h = JSON.parse(localStorage.getItem('vp_historial')) || [];
+        let msj = `*${CONFIG.nombreNegocio} - PEDIDO*\n*CLIENTE:* ${c.n}\n*DIR:* ${c.d}\n--------------------------\n`;
         document.querySelectorAll('.p-name').forEach((n, i) => {
-            if(n.value) { 
-                msj += `• ${n.value} (${document.querySelectorAll('.p-qty')[i].value} ${document.querySelectorAll('.p-unit')[i].value})\n`;
-                if(!h.includes(n.value)) h.push(n.value);
-            }
+            if(n.value) msj += `• ${n.value} (${document.querySelectorAll('.p-qty')[i].value} ${document.querySelectorAll('.p-unit')[i].value})\n`;
         });
-        localStorage.setItem('vp_historial', JSON.stringify(h));
-        msj += `--------------------------\n*PAGO:* ${document.getElementById('pago').value}\n*UBICACIÓN:* ${gps}\n\n_Vibras Positivas_`;
+
+        // ESTA ES LA PARTE IMPORTANTE QUE FALTABA
+        const obs = document.getElementById('observaciones').value;
+        if(obs) msj += `--------------------------\n*NOTAS:* ${obs}\n`;
+
+        msj += `\n_Enviado desde Vibras Positivas_`;
         window.open(`https://wa.me/${CONFIG.whatsapp}?text=${encodeURIComponent(msj)}`, '_blank');
     }
 </script>
