--- a/fruver-lacentral/index.html
+++ b/fruver-lacentral/index.html
@@ -59,7 +59,7 @@
 <script>
     // SOLO CAMBIA ESTO PARA CADA CLIENTE
     const CONFIG = {
-        nombreNegocio: "MINIPRECIOS", 
+        nombreNegocio: "FRUVER LA CENTRAL", 
         whatsapp: "573148648770", 
         idSuscriptor: "VP-CAU-005"
     };
