--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="./miniprecios/" class="btn">💰 MINIPRECIOS</a>
         <a href="./celumaster/" class="btn">📱 CELUMASTER</a>
         <a href="./luzmar/" class="btn">✨ LUZMAR</a>
+        <a href="./nombre-de-la-carpeta/" class="btn">🚀 SANTUARIO DE LA PRIMERA</a>
 
 
     </div>
