--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="./miniprecios/" class="btn">💰 MINIPRECIOS</a>
         <a href="./celumaster/" class="btn">📱 CELUMASTER</a>
         <a href="./luzmar/" class="btn">✨ LUZMAR</a>
-        <a href="./nombre-de-la-carpeta/" class="btn">🚀 SANTUARIO LA PRIMERA</a>
+        <a href="./santuario%20la%20primera/" class="btn">⛪ SANTUARIO LA PRIMERA</a>
 
 
     </div>
