--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         <a href="./miniprecios/" class="btn">💰 MINIPRECIOS</a>
         <a href="./celumaster/" class="btn">📱 CELUMASTER</a>
         <a href="./luzmar/" class="btn">👗 LUZMAR</a>
-        
-        <a href="./santuario%20la%20primera/" class="btn">⛪ SANTUARIOLAPRIMERA</a>
+        <a href="./santuariolaprimera/" class="btn">⛪ SANTUARIOLAPRIMERA</a>
     </div>
 
     <footer>
