--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <a href="./celumaster/" class="btn">📱 CELUMASTER</a>
         <a href="./luzmar/" class="btn">👗 LUZMAR</a>
         <a href="./santuariolaprimera/" class="btn">⛪ SANTUARIOLAPRIMERA</a>
+        <a href="./tienda-yire/" class="btn">🏠 TIENDA YIRE</a>
     </div>
 
     <footer>
