--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <a href="./luzmar/" class="btn">👗 LUZMAR</a>
         <a href="./santuariolaprimera/" class="btn">⛪ SANTUARIOLAPRIMERA</a>
         <a href="./tienda-yire/" class="btn">🏠 TIENDA YIRE</a>
+        <a href="./bodega-la-central/" class="btn">📦 BODEGA LA CENTRAL</a>
     </div>
 
     <footer>
