--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <a href="./santuariolaprimera/" class="btn">⛪ SANTUARIOLAPRIMERA</a>
         <a href="./tienda-yire/" class="btn">🏠 TIENDA YIRE</a>
         <a href="./bodega-la-central/" class="btn">📦 BODEGA LA CENTRAL</a>
+        <a href="./tienda-cielo/" class="btn">☁️ TIENDA CIELO</a>
     </div>
 
     <footer>
