--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <a href="./tienda-yire/" class="btn">🏠 TIENDA YIRE</a>
         <a href="./bodega-la-central/" class="btn">📦 BODEGA LA CENTRAL</a>
         <a href="./tienda-cielo/" class="btn">☁️ TIENDA CIELO</a>
+        <a href="./edogra-distribuciones/" class="btn">🚚 EDOGRA DISTRIBUCIONES</a>
+
     </div>
 
     <footer>
