--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <a href="./celumaster/" class="btn">📱 CELUMASTER</a>
         <a href="./luzmar/" class="btn">👗 LUZMAR</a>
         <a href="./santuario%20la%20primera/" class="btn">⛪ SANTUARIO LA PRIMERA</a>
+        <a href="./sotracor-caucasia/" class="btn">🚌 SOTRACOR CAUCASIA</a>
+
     </div>
 
     <footer>
