--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
         <a href="./luzmar/" class="btn">👗 LUZMAR</a>
         <a href="./santuario%20la%20primera/" class="btn">⛪ SANTUARIO LA PRIMERA</a>
         <a href="./sotracor-caucasia/" class="btn">🚌 SOTRACOR CAUCASIA</a>
+        <a href="./odontologia-estetica-bocas/" class="btn">🦷 ODONTOLOGÍA ESTÉTICA BOCAS</a>
+
 
     </div>
 
