--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <a href="./santuario%20la%20primera/" class="btn">⛪ SANTUARIO LA PRIMERA</a>
         <a href="./sotracor-caucasia/" class="btn">🚌 SOTRACOR CAUCASIA</a>
         <a href="./odontologia--estetica-bocas/" class="btn">🦷 ODONTOLOGÍA ESTÉTICA BOCAS</a>
+        <a href="./labarberia/" class="btn">💈 LA BARBERÍA</a>
 
 
     </div>
