--- a/index.html
+++ b/index.html
@@ -3,91 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vibras Positivas - Menú de Aplicaciones</title>
+    <title>Vibras Positivas - Apps Caucasia</title>
     <style>
-        body { 
-            background: #000; 
-            color: #FFD700; 
-            text-align: center; 
-            font-family: 'Arial', sans-serif; 
-            padding: 40px 20px; 
-        }
-        h1 { 
-            font-size: 1.8rem; 
-            border-bottom: 2px solid #FFD700; 
-            display: inline-block; 
-            padding-bottom: 10px; 
-            text-transform: uppercase; 
-        }
-        .container { 
-            display: flex; 
-            flex-direction: column; 
-            gap: 15px; 
-            align-items: center; 
-            margin-top: 30px; 
-        }
+        :root { --primario: #FFD700; --secundario: #000000; --blanco: #ffffff; --gris-claro: #f4f4f4; }
+        body { font-family: 'Arial', sans-serif; background-color: var(--gris-claro); margin: 0; padding: 15px; text-align: center; }
+        .container { max-width: 500px; margin: auto; background: var(--blanco); border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); overflow: hidden; }
+        header { background: var(--secundario); color: var(--primario); padding: 30px; border-bottom: 5px solid var(--primario); }
+        h1 { margin: 0; font-size: 28px; letter-spacing: 2px; }
+        .subtitle { font-size: 12px; color: white; margin-top: 5px; text-transform: uppercase; }
+        .content { padding: 20px; }
+        .category-title { font-size: 14px; font-weight: bold; color: #888; text-transform: uppercase; margin: 20px 0 10px; border-bottom: 1px solid #ddd; padding-bottom: 5px; text-align: left; }
         .btn { 
-            background: #FFD700; 
-            color: #000; 
-            padding: 16px; 
-            text-decoration: none; 
-            border-radius: 12px; 
-            font-weight: bold; 
-            width: 100%; 
-            max-width: 320px; 
-            font-size: 1.1rem; 
-            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.2); 
-            transition: 0.3s; 
-            border: 2px solid transparent; 
+            display: flex; align-items: center; justify-content: space-between;
+            width: 100%; padding: 18px; margin: 10px 0; 
+            background: var(--blanco); color: var(--secundario); 
+            text-decoration: none; font-weight: bold; border-radius: 12px; 
+            border: 1px solid #eee; transition: 0.3s; box-sizing: border-box;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
         }
-        .btn:hover { 
-            transform: scale(1.03); 
-            background: #fff; 
-            border: 2px solid #FFD700; 
-        }
-        /* ESTILO PARA RESALTAR A DISTRILECO */
-        .btn-lider {
-            background: #fff;
-            color: #000;
-            border: 3px solid #FFD700;
-            font-size: 1.2rem;
-        }
-        footer { 
-            margin-top: 50px; 
-            font-size: 0.8rem; 
-            color: #666; 
-        }
+        .btn:hover { background: var(--primario); transform: scale(1.02); }
+        .btn-main { background: var(--primario); border: none; font-size: 18px; }
+        .emoji { font-size: 20px; }
+        footer { padding: 20px; font-size: 12px; color: #aaa; }
     </style>
 </head>
 <body>
-    <h1>BIENVENIDO A VIBRAS POSITIVAS</h1>
-    <p>Selecciona una tienda para pedir tu domicilio:</p>
-    
-    <div class="container">
-        <a href="./distrileco/" class="btn btn-lider">🏢 DISTRILECO (SUPERARROZ)</a>
+
+<div class="container">
+    <header>
+        <h1>VIBRAS POSITIVAS</h1>
+        <div class="subtitle">Ecosistema Digital de Caucasia</div>
+    </header>
+
+    <div class="content">
         
-        <a href="./mercafacil/" class="btn">🛒 MERCAFÁCIL</a>
-        <a href="./tienda-yire/" class="btn">🏠 TIENDA YIRE</a>
-        <a href="./bodega-la-central/" class="btn">📦 BODEGA LA CENTRAL</a>
-        <a href="./tienda-cielo/" class="btn">☁️ TIENDA CIELO</a>
-        <a href="./edogra-distribuciones/" class="btn">🚚 EDOGRA DISTRIBUCIONES</a>
-        <a href="./fruver-lacentral/" class="btn">🍋 FRUVER LA CENTRAL</a>
-        <a href="./nelson/" class="btn">🧺 TIENDA DE NELSON</a>
-        <a href="./inversiones-charlotte/" class="btn">👗 INV. CHARLOTTE</a>
-        <a href="./miniprecios/" class="btn">💰 MINIPRECIOS</a>
-        <a href="./celumaster/" class="btn">📱 CELUMASTER</a>
-        <a href="./luzmar/" class="btn">👗 LUZMAR</a>
-        <a href="./santuario%20la%20primera/" class="btn">⛪ SANTUARIO LA PRIMERA</a>
-        <a href="./sotracor-caucasia/" class="btn">🚌 SOTRACOR CAUCASIA</a>
-        <a href="./odontologia--estetica-bocas/" class="btn">🦷 ODONTOLOGÍA ESTÉTICA BOCAS</a>
-        <a href="./labarberia/" class="btn">💈 LA BARBERÍA</a>
+        <div class="category-title">⭐ Nuestra Marca Propia</div>
+        <a href="./distrileco/" class="btn btn-main">
+            <span>🌾 DISTRILECO (Superarroz)</span>
+            <span class="emoji">🚀</span>
+        </a>
 
+        <div class="category-title">🛒 Tiendas y Abarrotes</div>
+        <a href="./distribuciones-jm/" class="btn">
+            <span>📦 Distribuciones JM</span>
+            <span class="emoji">🛒</span>
+        </a>
+        <a href="./deleitesaludable.html" class="btn">
+            <span>🥗 Deleite Saludable</span>
+            <span class="emoji">🍎</span>
+        </a>
+        <a href="./mercafacil/" class="btn">
+            <span>🏪 Mercafácil</span>
+            <span class="emoji">🛒</span>
+        </a>
 
-    </div>
+        <div class="category-title">🚌 Transporte y Servicios</div>
+        <a href="./sotracor-caucasia/" class="btn">
+            <span>🚌 Sotracor Caucasia</span>
+            <span class="emoji">🎫</span>
+        </a>
+        <a href="./labarberia/" class="btn">
+            <span>💈 La Barbería</span>
+            <span class="emoji">✂️</span>
+        </a>
+        <a href="./odontologia-estetica-bocas/" class="btn">
+            <span>🦷 Odontología Estética Bocas</span>
+            <span class="emoji">📅</span>
+        </a>
+
+        </div>
 
     <footer>
-        Red de Domicilios Vibras Positivas © 2026 <br>
-        <strong>Caucasia, Antioquia</strong>
+        Desarrollado por Harold & Marleny <br>
+        <strong>ASETEC HM © 2026</strong>
     </footer>
+</div>
+
 </body>
 </html>
