--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <a href="./luzmar/" class="btn-cajon">✨ LUZMAR</a>
         <a href="./nelson/" class="btn-cajon">👤 NELSON</a>
         <a href="./santuariolaprimera/" class="btn-cajon">🙏 SANTUARIO LA PRIMERA</a>
+        <a href="./creadoraqr/" class="btn-cajon">🙏 CREAADORA CODIGOS QR</a>
     </div>
 
     <footer>
