--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="./miniprecios/" class="btn-cajon">💰 MINIPRECIOS</a>
 
         <div class="categoria">🛠️ Servicios y Productos</div>
-        <a href="./atarraya.html" class="btn-cajon">🎣 ATARRAYAS Y HAMACAS</a>
+        <a href="./atarraya/" class="btn-cajon">🎣 ATARRAYAS Y HAMACAS</a>
         <a href="./sotracor-caucasia/" class="btn-cajon">🚌 SOTRACOR CAUCASIA</a>
         <a href="./labarberia/" class="btn-cajon">💈 LA BARBERÍA</a>
         <a href="./odontologia--estetica-bocas/" class="btn-cajon">🦷 ODON. ESTÉTICA BOCAS</a>
