--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         <a href="./luzmar/" class="btn-cajon">✨ LUZMAR</a>
         <a href="./nelson/" class="btn-cajon">👤 NELSON</a>
         <a href="./santuariolaprimera/" class="btn-cajon">🙏 SANTUARIO LA PRIMERA</a>
+        <a href="./drogueria-inglesa" class="btn-cajon">➕ DROGUERÍA INGLESA</a>
+
     </div>
 
     <footer>
