--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         }
         .btn-cajon:hover { transform: scale(1.03); background: #e6c200; }
         
+        /* Estilo especial para tus herramientas de administrador */
+        .btn-admin { background: #000; color: #FFD700; border: 2px solid #FFD700; }
+
         footer { padding: 25px; font-size: 12px; color: #888; line-height: 1.6; }
         .vp-brand { color: var(--secundario); font-weight: bold; text-decoration: none; font-size: 15px; }
     </style>
@@ -37,13 +40,15 @@
     </header>
 
     <div class="content">
-        <div class="categoria">⭐ Nuestra Marca</div>
+        <div class="categoria">⭐ Mi Empresa y Herramientas</div>
         <a href="./distrileco/" class="btn-cajon">🌾 DISTRILECO (SUPERARROZ)</a>
+        <a href="./creadorqr/" class="btn-cajon btn-admin">🖼️ CREADOR DE QR</a>
 
         <div class="categoria">🛒 Tiendas y Comercio</div>
         <a href="./distribuciones-jm/" class="btn-cajon">📦 DISTRIBUCIONES JM</a>
         <a href="./mercafacil/" class="btn-cajon">🏪 MERCAFÁCIL</a>
-        <a href="./deleitesaludable.html" class="btn-cajon">🥗 DELEITE SALUDABLE</a>
+        <a href="./deleitesaludable" class="btn-cajon">🥗 DELEITE SALUDABLE</a>
+        <a href="./drogueria-inglesa" class="btn-cajon">➕ DROGUERÍA INGLESA</a>
         <a href="./bodega-la-central/" class="btn-cajon">🏬 BODEGA LA CENTRAL</a>
         <a href="./fruver-lacentral/" class="btn-cajon">🍏 FRUVER LA CENTRAL</a>
         <a href="./tienda-cielo/" class="btn-cajon">🏠 TIENDA CIELO</a>
@@ -51,7 +56,7 @@
         <a href="./miniprecios/" class="btn-cajon">💰 MINIPRECIOS</a>
 
         <div class="categoria">🛠️ Servicios y Productos</div>
-        <a href="./atarraya/" class="btn-cajon">🎣 ATARRAYAS Y HAMACAS</a>
+        <a href="./atarraya" class="btn-cajon">🎣 ATARRAYAS Y HAMACAS</a>
         <a href="./sotracor-caucasia/" class="btn-cajon">🚌 SOTRACOR CAUCASIA</a>
         <a href="./labarberia/" class="btn-cajon">💈 LA BARBERÍA</a>
         <a href="./odontologia--estetica-bocas/" class="btn-cajon">🦷 ODON. ESTÉTICA BOCAS</a>
@@ -61,14 +66,12 @@
         <a href="./luzmar/" class="btn-cajon">✨ LUZMAR</a>
         <a href="./nelson/" class="btn-cajon">👤 NELSON</a>
         <a href="./santuariolaprimera/" class="btn-cajon">🙏 SANTUARIO LA PRIMERA</a>
-        <a href="./drogueria-inglesa" class="btn-cajon">➕ DROGUERÍA INGLESA</a>
-
     </div>
 
     <footer>
         Desarrollado por <br>
-        <span class="vp-brand">VIBRAS POSITIVAS</span> <br>
-        Derechos de Autor © 2026
+        <strong>ASETEC HM © 2026</strong> <br>
+        <span class="vp-brand">VIBRAS POSITIVAS</span>
     </footer>
 </div>
 
