--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="content">
         <div class="categoria">⭐ Mi Empresa y Herramientas</div>
         <a href="./distrileco/" class="btn-cajon">🌾 DISTRILECO (SUPERARROZ)</a>
-        <a href="./creadorqr/" class="btn-cajon btn-admin">🖼️ CREADOR DE QR</a>
+        <a href="./creadoraqr/" class="btn-cajon btn-admin">🖼️ CREADOR DE QR</a>
 
         <div class="categoria">🛒 Tiendas y Comercio</div>
         <a href="./distribuciones-jm/" class="btn-cajon">📦 DISTRIBUCIONES JM</a>
