--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
         <a href="./luzmar/" class="btn-cajon">✨ LUZMAR</a>
         <a href="./nelson/" class="btn-cajon">👤 NELSON</a>
         <a href="./santuariolaprimera/" class="btn-cajon">🙏 SANTUARIO LA PRIMERA</a>
+        <a href="./estos-burgers" class="btn-cajon">🍔 ESTOS BURGERS</a>
+
     </div>
 
     <footer>
