--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <a href="./nelson/" class="btn-cajon">👤 NELSON</a>
         <a href="./santuariolaprimera/" class="btn-cajon">🙏 SANTUARIO LA PRIMERA</a>
         <a href="./estos-burgers" class="btn-cajon">🍔 ESTOS BURGERS</a>
+        <a href="./paula-areiza" class="btn-cajon">👠 VENTAS PAULA AREIZA</a>
+
 
     </div>
 
