--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <a href="./santuariolaprimera/" class="btn-cajon">🙏 SANTUARIO LA PRIMERA</a>
         <a href="./estos-burgers" class="btn-cajon">🍔 ESTOS BURGERS</a>
         <a href="./paula-areiza" class="btn-cajon">👠 VENTAS PAULA AREIZA</a>
+        <a href="./ferreteria-la-hacienda/" class="btn-cajon">🔨 FERRETERÍA LA HACIENDA</a>
 
 
     </div>
