--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <a href="./estos-burgers" class="btn-cajon">🍔 ESTOS BURGERS</a>
         <a href="./paula-areiza" class="btn-cajon">👠 VENTAS PAULA AREIZA</a>
         <a href="./ferreteria-la-hacienda/" class="btn-cajon">🔨 FERRETERÍA LA HACIENDA</a>
+        <a href="./alejo-mecanicomoto-movil" class="btn-cajon">🛠️ ALEJO MECÁNICO MOTO-MÓVIL</a>
 
 
     </div>
