--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <a href="./paula-areiza" class="btn-cajon">👠 VENTAS PAULA AREIZA</a>
         <a href="./ferreteria-la-hacienda/" class="btn-cajon">🔨 FERRETERÍA LA HACIENDA</a>
         <a href="./alejo-mecanicomoto-movil" class="btn-cajon">🛠️ ALEJO MECÁNICO MOTO-MÓVIL</a>
+        <a href="./tienda-mall-el-triangulo/" class="btn-cajon">🏪 TIENDA MALL EL TRIÁNGULO</a>
 
 
     </div>
