--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <a href="./ferreteria-la-hacienda/" class="btn-cajon">🔨 FERRETERÍA LA HACIENDA</a>
         <a href="./alejo-mecanicomoto-movil" class="btn-cajon">🛠️ ALEJO MECÁNICO MOTO-MÓVIL</a>
         <a href="./tienda-mall-el-triangulo/" class="btn-cajon">🏪 TIENDA MALL EL TRIÁNGULO</a>
+        <a href="./tienda-azul" class="btn-cajon">🔵 TIENDA AZUL</a>
 
 
     </div>
