--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <a href="./alejo-mecanicomoto-movil" class="btn-cajon">🛠️ ALEJO MECÁNICO MOTO-MÓVIL</a>
         <a href="./tienda-mall-el-triangulo/" class="btn-cajon">🏪 TIENDA MALL EL TRIÁNGULO</a>
         <a href="./tienda-azul" class="btn-cajon">🔵 TIENDA AZUL</a>
-
+        <a href="./bienestar-y-belleza-Yeraldin" class="btn-cajon">🔵 BIENESTAR Y BELLEZA YERALDIN</a>
+    
 
     </div>
 
