--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         <a href="./tienda-mall-el-triangulo/" class="btn-cajon">🏪 TIENDA MALL EL TRIÁNGULO</a>
         <a href="./tienda-azul" class="btn-cajon">🔵 TIENDA AZUL</a>
         <a href="./bienestar-y-belleza-Yeraldin" class="btn-cajon">🔵 BIENESTAR Y BELLEZA YERALDIN</a>
-        <a href="./pollo-harana/index" class="app-card"><i>🍗</i><span>Pollo Harana</span></a>
+        <a href="./pollo-harana/index" class="btn-cajon">🍗 POLLO HARANA</a>
+
     
 
     </div>
