--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
         <a href="./celumaster/index.html" class="btn-cajon">📲 CELUMASTER</a>
 
         <div class="categoria">Bienestar y Belleza</div>
-        <a href="./bienestar-y-belleza-Yeraldin/index.html" class="btn-cajon">✨ YERALDIN BIENESTAR</a>
+        <a href="./bienestar-y-belleza-Yeraldin.html" class="btn-cajon">✨ YERALDIN BIENESTAR</a>
         <a href="./drogueria-inglesa/index.html" class="btn-cajon">💊 DROGUERÍA INGLESA</a>
 
         <div class="categoria">Servicios Especializados</div>
-        <a href="./alejo-mecanicomoto-movil/index.html" class="btn-cajon">🛠️ ALEJO MECÁNICO</a>
+        <a href="./alejo-mecanicomoto-movil.html" class="btn-cajon">🛠️ ALEJO MECÁNICO</a>
         <a href="./ferreteria-la-hacienda/index.html" class="btn-cajon">🔨 FERRETERÍA HACIENDA</a>
-        <a href="./atarraya/index.html" class="btn-cajon">🎣 ATARRAYAS & HAMACAS</a>
-        <a href="./ventas-paula-areiza/index.html" class="btn-cajon">👠 VENTAS PAULA AREIZA</a>
+        <a href="./atarraya.html" class="btn-cajon">🎣 ATARRAYAS & HAMACAS</a>
+        <a href="./ventas-paula-areiza.html" class="btn-cajon">👠 VENTAS PAULA AREIZA</a>
     </div>
 </div>
-    
+
 <footer>
     Desarrollado y Administrado por <br>
     <b>ASETEC HM © 2026</b> <br>
