--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <a href="./deleite-saludable/index.html" class="btn-cajon">🥗 DELEITE SALUDABLE</a>
 
         <div class="categoria">Tiendas y Mercados</div>
-        <a href="./tienda-azul.html" class="btn-cajon">🔵 TIENDA AZUL</a>
+        <a href="./tienda-azul/index.html" class="btn-cajon">🔵 TIENDA AZUL</a>
         <a href="./tienda-mall-el-triangulo/index.html" class="btn-cajon">🏪 MALL EL TRIÁNGULO</a>
         <a href="./mercafacil/index.html" class="btn-cajon">🛒 MERCAFÁCIL</a>
         <a href="./fruver-lacentral/index.html" class="btn-cajon">🍏 FRUVER LA CENTRAL</a>
@@ -72,14 +72,14 @@
         <a href="./celumaster/index.html" class="btn-cajon">📲 CELUMASTER</a>
 
         <div class="categoria">Bienestar y Belleza</div>
-        <a href="./bienestar-y-belleza-Yeraldin.html" class="btn-cajon">✨ YERALDIN BIENESTAR</a>
+        <a href="./bienestar-y-belleza-Yeraldin/index.html" class="btn-cajon">✨ YERALDIN BIENESTAR</a>
         <a href="./drogueria-inglesa/index.html" class="btn-cajon">💊 DROGUERÍA INGLESA</a>
 
         <div class="categoria">Servicios Especializados</div>
-        <a href="./alejo-mecanicomoto-movil.html" class="btn-cajon">🛠️ ALEJO MECÁNICO</a>
+        <a href="./alejo-mecanicomoto-movil/index.html" class="btn-cajon">🛠️ ALEJO MECÁNICO</a>
         <a href="./ferreteria-la-hacienda/index.html" class="btn-cajon">🔨 FERRETERÍA HACIENDA</a>
         <a href="./atarraya.html" class="btn-cajon">🎣 ATARRAYAS & HAMACAS</a>
-        <a href="./ventas-paula-areiza.html" class="btn-cajon">👠 VENTAS PAULA AREIZA</a>
+        <a href="./ventas-paula-areiza/index.html" class="btn-cajon">👠 VENTAS PAULA AREIZA</a>
     </div>
 </div>
 
